feat(captive-portal): add network config and startup scripts

--- a/captive-portal/config/dnsmasq/dnsmasq.conf
+++ b/captive-portal/config/dnsmasq/dnsmasq.conf
@@ -1,15 +1,40 @@
-# Interfaz donde levanta el AP
-interface=wlo1
+# =============================================
+# Configuración de dnsmasq para Portal Cautivo
+# =============================================
 
-# Rango DHCP para los clientes
-dhcp-range=192.168.50.2,192.168.50.50,255.255.255.0,12h
+# Interfaz virtual del AP
+interface=wlo1_ap
 
-# Puerta de enlace predeterminada para los clientes
+# Vincularse solo a esta interfaz
+bind-interfaces
+
+# Rango DHCP
+dhcp-range=192.168.50.2,192.168.50.50,12h
+
+# Gateway (opcion 3)
 dhcp-option=3,192.168.50.1
 
-# Servidores DNS para los clientes
-dhcp-option=6,8.8.8.8,8.8.4.4
+# DNS - nosotros mismos (reenviaremos las consultas)
+dhcp-option=6,192.168.50.1
+server=8.8.8.8
+server=8.8.4.4
+
+# Solo estos dominios para deteccion automatica de portal (captive portal detection)
+# Android
+address=/connectivitycheck.gstatic.com/192.168.50.1
+address=/clients3.google.com/192.168.50.1
+# Apple
+address=/captive.apple.com/192.168.50.1
+address=/www.apple.com/192.168.50.1
+# Windows
+address=/www.msftconnecttest.com/192.168.50.1
+# Firefox
+address=/detectportal.firefox.com/192.168.50.1
 
 # No leer configuraciones del sistema
 no-resolv
 no-hosts
+
+# Logging para debug
+log-queries
+log-dhcp
