--- a/captive-portal/config/hostapd/hostapd.conf
+++ b/captive-portal/config/hostapd/hostapd.conf
@@ -1,11 +1,43 @@
-interface=wlo1
+# =============================================
+# Configuración de hostapd para Portal Cautivo
+# =============================================
+
+# Interfaz virtual creada con iw
+interface=wlo1_ap
+
+# Driver para mac80211
 driver=nl80211
+
+# Nombre de la red
 ssid=MiRed_Captive
+
+# Modo de hardware: g = 2.4GHz (802.11b/g/n)
 hw_mode=g
+
+# Canal - DEBE coincidir con el hotspot
 channel=6
+
+# Habilitar 802.11n
+ieee80211n=1
+
+# WMM (WiFi Multimedia) para QoS
 wmm_enabled=1
+
+country_code=CU
+ieee80211d=1
+
+# Control de acceso por MAC
+macaddr_acl=0
+
+# Algoritmos de autenticación (1 = WPA)
 auth_algs=1
+
+# No ocultar SSID
+ignore_broadcast_ssid=0
+
+# WPA2
 wpa=2
-wpa_passphrase=ClaveSegura123
+wpa_passphrase=portal1234
 wpa_key_mgmt=WPA-PSK
+wpa_pairwise=CCMP
 rsn_pairwise=CCMP
